tests/baselines/reference/implementsIncorrectlyNoAssertion.errors.txt
tests/cases/compiler/implementsIncorrectlyNoAssertion.ts(9,5): error TS2416: Property 'x' in type 'Baz' is not assignable to the same property in base type 'Foo & Bar'.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/implementsIncorrectlyNoAssertion.ts (1 errors) ====
    declare class Foo {
        x: string;
    }
    declare class Bar {
        y: string;
    }
    type Wrapper = Foo & Bar;
    class Baz implements Wrapper {
        x: number;
        ~
!!! error TS2416: Property 'x' in type 'Baz' is not assignable to the same property in base type 'Foo & Bar'.
!!! error TS2416:   Type 'number' is not assignable to type 'string'.
        y: string;
    }
    